Fix Contrast issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ body {
 
 
 .color-primary {
-    color: var(--primary-color);
+    color: var(--black);
 }
 
 .color-secondary {
